<resources>
    <string name="app_name">SmartLocker</string>
    <string name="available">사용가능</string>
    <string name="be_in_use">사용 중</string>
    <string name="not_available">점검 중</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_0">0</string>
    <string name="erase">지우기</string>
</resources>