<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradients"
    tools:context=".presentation.view.activity.MainActivity">

    <ImageView
        android:id="@+id/adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/ic_option_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node1"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_1"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_2"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_3"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_4"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node5"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_5"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node6"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_6"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"

            android:text="@string/_7"
            android:textSize="50sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node8"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"

            android:text="@string/_8"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node9"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_9"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node10"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_10"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node11"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_11"
            android:textSize="50sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/node12"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/node_available"
            android:text="@string/_12"
            android:textSize="50sp" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_status_circle"
            android:backgroundTint="@color/light_gray_500"
            android:baselineAlignBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/available"
            android:textColor="@color/light_gray_500"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_status_circle"
            android:backgroundTint="@color/purple_500"
            android:baselineAlignBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/be_in_use"
            android:textColor="@color/light_gray_500"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_status_circle"
            android:backgroundTint="@color/fixing_warning"
            android:baselineAlignBottom="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_available"
            android:textColor="@color/light_gray_500"
            android:textSize="30sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>